# project-templates

./: README.md  flake.nix
cpp/: .editorconfig  CMakeLists.txt  default.nix  flake.nix
cpp-meson/: .envrc  default.nix  flake.nix
cpp-meson/src/: main.cpp  meson.build
cpp/src/: main.cpp
nim/: .envrc  default.nix  flake.nix  generic.nimble
nim/src/: generic.nim
nix/: default.nix  flake.nix
pure-qml/: .envrc  example-qml.qmlproject
qml-qt/: flake.nix
